contrib/curry/ingress-external/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: _-ext
  labels:
    app.kubernetes.io/name: _
    app.kubernetes.io/instance: external
    app.kubernetes.io/managed-by: kustomize
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: external
  rules:
    - host: _.terabox.moe
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: _
                port: 
                  name: _
  tls:
    - secretName: https-cert
      hosts:
        - _.terabox.moe
